--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background-color: #ebebeb;
+  background-color: #0a0a0a;
   overflow: hidden;
   position: relative;
 }
